--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:text="@string/post_image" />
 
     <com.google.android.gms.common.SignInButton
+        android:id="@+id/gplus_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
